force-app/main/default/objects/Case/fields/A_C_Main_Type__c.field-meta.xml
<CustomField>
    <fullName>A_C_Main_Type__c</fullName>
    <description>Displays the user who has first handled the case</description>
    <formula>A_C_REG_ID__r.Aircraft_Main_Type__c</formula>
    <label>A/C Main Type</label>
    <type>Text</type>
</CustomField>