force-app/main/default/objects/Case/fields/A_C_REG_ID__c.field-meta.xml
<CustomField>
    <fullName>A_C_REG_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the Aircraft the Case is related to</description>
    <label>A/C REG</label>
    <referenceTo>Aircraft__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>