force-app/main/default/objects/Case/fields/A_C_Reg_Search__c.field-meta.xml
<CustomField>
    <fullName>A_C_Reg_Search__c</fullName>
    <description>Displays the value of the Aircraft that the Case is related to in text format to allow field to be indexed for searching</description>
    <label>A/C Reg Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>