force-app/main/default/objects/Case/fields/A_C_Type__c.field-meta.xml
<CustomField>
    <fullName>A_C_Type__c</fullName>
    <description>Displays the Aircraft Type that the Case is related to (via Aircraft)</description>
    <formula>A_C_REG_ID__r.Aircraft_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A/C Type</label>
    <type>Text</type>
</CustomField>