force-app/main/default/objects/Case/fields/Accepted_Class__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Class__c</fullName>
    <description>Displays the value of the Passenger's Travel Class if available (post check-in)</description>
    <formula>if(Accepted_Class_txt__c != null,Accepted_Class_txt__c,IF(Passengerid__r.Cabin_Code__c != null,Passengerid__r.Cabin_Code__c,"Unidentified"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Class</label>
    <type>Text</type>
</CustomField>