force-app/main/default/objects/Case/fields/Accepted_Class_txt__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Class_txt__c</fullName>
    <description>Displays the value of Passenger's Travel Class (post check-in)</description>
    <label>Accepted Class txt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>