force-app/main/default/objects/Case/fields/Accepted_Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Seat_Number__c</fullName>
    <description>Displays the value of Passenger's Seat Number if available (post check-in)</description>
    <formula>If(NOT(ISBLANK(Passengerid__r.Checkin_Seat__c)),Passengerid__r.Checkin_Seat__c,
IF(Passengerid__r.Booking_Seat__c != null,Passengerid__r.Booking_Seat__c,"Unidentified"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Seat Number</label>
    <type>Text</type>
</CustomField>