force-app/main/default/objects/Case/fields/Accepted_Seat_txt__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Seat_txt__c</fullName>
    <description>Displays the value of Passenger's Seat Number (post check-in)</description>
    <label>Accepted Seat txt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>