force-app/main/default/objects/Case/fields/accid__c.field-meta.xml
<CustomField>
    <fullName>accid__c</fullName>
    <description>Displays the value of Passenger's Account</description>
    <formula>Passengerid__r.AccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>accid (Clarify)</label>
    <type>Text</type>
</CustomField>