force-app/main/default/objects/Case/fields/Account_Debited__c.field-meta.xml
<CustomField>
    <fullName>Account_Debited__c</fullName>
    <description>Displays the value of the Account Number the Cash Compensation is transferred to</description>
    <label>Account Debited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>