force-app/main/default/objects/Case/fields/Acknowledge_First__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_First__c</fullName>
    <defaultValue>0</defaultValue>
    <label>First</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>