force-app/main/default/objects/Case/fields/Acknowledge_on_24_hrs__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_on_24_hrs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Acknowledge within 24 hrous identifier</description>
    <label>Acknowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>