force-app/main/default/objects/Case/fields/Aircraft_Registration_F__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Registration_F__c</fullName>
    <description>Displays the Aircraft Registration value (via Aircraft)</description>
    <formula>Flightid__r.AircraftId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircraft Registration</label>
    <type>Text</type>
</CustomField>