force-app/main/default/objects/Case/fields/Aircraft_Type_F__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type_F__c</fullName>
    <description>Displays the Aircraft Type that the Case is related to (via Aircraft)</description>
    <formula>Flightid__r.AircraftId__r.Aircraft_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircraft Type</label>
    <type>Text</type>
</CustomField>