force-app/main/default/objects/Case/fields/All_Cases__c.field-meta.xml
<CustomField>
    <fullName>All_Cases__c</fullName>
    <description>Checks whether the Case is concerned with KPI report for DT</description>
    <formula>IF(
(ISPICKVAL( Action__c, "Remain" ) ||  ISPICKVAL( Action__c, "Completed" ))  &amp;&amp; (  TEXT( Status ) &lt;> "Void" ) , TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Cases</label>
    <type>Checkbox</type>
</CustomField>