force-app/main/default/objects/Case/fields/Approved_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Approved_Compensation__c</fullName>
    <label>Approved Compensation</label>
    <summaryFilterItems>
        <field>Compensation__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Compensation__c.CaseId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>