force-app/main/default/objects/Case/fields/ARR_FLT_FROM__c.field-meta.xml
<CustomField>
    <fullName>ARR_FLT_FROM__c</fullName>
    <description>Displays the Flight that is heading towards Suvarnabhumi Airport</description>
    <label>ARR FLT FROM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>