force-app/main/default/objects/Case/fields/ATA__c.field-meta.xml
<CustomField>
    <fullName>ATA__c</fullName>
    <description>Displays the actual time for arrival for the Flight the Case is related to</description>
    <formula>Flightid__r.ATA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATA</label>
    <type>Text</type>
</CustomField>