force-app/main/default/objects/Case/fields/ATA_Chapter_2_F__c.field-meta.xml
<CustomField>
    <fullName>ATA_Chapter_2_F__c</fullName>
    <description>Displays the first two letters from the ATA Chapter of the equipment</description>
    <formula>LEFT(  ATA_Chapter__c , 2)</formula>
    <label>ATA CH</label>
    <type>Text</type>
</CustomField>