force-app/main/default/objects/Case/fields/ATA_Chapter__c.field-meta.xml
<CustomField>
    <fullName>ATA_Chapter__c</fullName>
    <description>Displays the ATA Chapter of the equipment</description>
    <formula>EquipmentId__r.Depend_On_Object__r.Name</formula>
    <label>ATA DES.</label>
    <type>Text</type>
</CustomField>