force-app/main/default/objects/Case/fields/ATD__c.field-meta.xml
<CustomField>
    <fullName>ATD__c</fullName>
    <description>Displays the actual time for departure for the Flight the Case is related to</description>
    <formula>Flightid__r.ATD__c</formula>
    <label>ATD</label>
    <type>Text</type>
</CustomField>