force-app/main/default/objects/Case/fields/Authorize_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Number__c</fullName>
    <description>Displays the Authorization Number of the personnel who logged the Case</description>
    <label>AUTH NO.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>