force-app/main/default/objects/Case/fields/Authorize_Signature__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Signature__c</fullName>
    <description>Displays the available signatures of Customer Feedback personnels in Bangkok</description>
    <label>Authorize Signature</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Letter_Language__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usanee Sangsingkeo</fullName>
            </value>
            <value>
                <fullName>Teerapol Chotichanapibal</fullName>
            </value>
            <value>
                <fullName>Priyasiri Juathes</fullName>
            </value>
            <value>
                <fullName>Plearnpun Sirihongse</fullName>
            </value>
            <value>
                <fullName>Anchalee Suthivanich</fullName>
            </value>
            <value>
                <fullName>Papassara Thamasakjinda</fullName>
            </value>
            <value>
                <fullName>Trajai Sriudommongkol</fullName>
            </value>
            <value>
                <fullName>Chamaiporn Pholpoul</fullName>
            </value>
            <value>
                <fullName>Thanasorn Phoonkabutr</fullName>
            </value>
            <value>
                <fullName>Suksatit Meesook</fullName>
            </value>
            <value>
                <fullName>Vicharn Jaroensuk</fullName>
            </value>
            <value>
                <fullName>Lapasrada Rongyen</fullName>
            </value>
            <value>
                <fullName>Kanokrut Tesakarn</fullName>
            </value>
            <value>
                <fullName>Sasiwimol Skulyong</fullName>
            </value>
            <value>
                <fullName>อุษณีย์ แสงสิงแก้ว</fullName>
            </value>
            <value>
                <fullName>ธีรพล	โชติชนาภิบาล</fullName>
            </value>
            <value>
                <fullName>ปรียาศิริ เชื้อเทศ</fullName>
            </value>
            <value>
                <fullName>เพลินพันธ์ สิริหงส์</fullName>
            </value>
            <value>
                <fullName>อัญชลี สุทธิวาณิชย์</fullName>
            </value>
            <value>
                <fullName>ปภัสสรา ธรรมศักดิ์จินดา</fullName>
            </value>
            <value>
                <fullName>ตราใจ ศรีอุดมมงคล</fullName>
            </value>
            <value>
                <fullName>ชไมพร ผลพูล</fullName>
            </value>
            <value>
                <fullName>ธนสร ปุณกะบุตร</fullName>
            </value>
            <value>
                <fullName>สุขสถิตย์ มีสุข</fullName>
            </value>
            <value>
                <fullName>วิชาญ เจริญสุข</fullName>
            </value>
            <value>
                <fullName>ลภัสรดา รองเย็น</fullName>
            </value>
            <value>
                <fullName>ธีรพล โชติชนาภิบาล</fullName>
            </value>
            <value>
                <fullName>ศศิวิมล สกุลยง</fullName>
            </value>
            <value>
                <fullName>กนกรัตน์ เทศกาล</fullName>
            </value>
            <value>
                <fullName>Charamporn Jotikasthira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>