force-app/main/default/objects/Case/fields/Authorize_Signature_Current__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Signature_Current__c</fullName>
    <description>Displays the authorize signature that is to be used in templates and print screens (from bangkok or from abroad)</description>
    <formula>CASE(Owner:User.Station__c,
"BKK", text(Authorize_Signature__c) ,
"CNX", text(Authorize_Signature__c) ,
"HKT", text(Authorize_Signature__c) ,
"KBV", text(Authorize_Signature__c) ,
"USM", text(Authorize_Signature__c) ,
 Authorize_Signature_Text__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorize Signature Current</label>
    <type>Text</type>
</CustomField>