force-app/main/default/objects/Case/fields/Authorize_Signature_for_Email_En__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Signature_for_Email_En__c</fullName>
    <description>This field will automatically be defaulted to the user's first name and last name (in English) if the field Authorize Signature is not selected</description>
    <formula>IF(OR(Owner:User.Station__c == "BKK",Owner:User.Station__c == "CNX",Owner:User.Station__c == "HKT",Owner:User.Station__c == "KBV",Owner:User.Station__c == "USM"), 

IF( Text(Authorize_Signature__c) != null , Text(Authorize_Signature__c) , Owner:User.FirstName &amp; " " &amp; Owner:User.LastName), 

Authorize_Signature_Text__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorize Signature for Email EN</label>
    <type>Text</type>
</CustomField>