force-app/main/default/objects/Case/fields/Authorize_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Signature_Text__c</fullName>
    <description>A text field that is used to input signatures from abroad personnels that are to be displayed at the end of emails and on print screens</description>
    <label>Authorize Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>