force-app/main/default/objects/Case/fields/Baggage_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Check_Number__c</fullName>
    <description>Displays the baggage check number</description>
    <label>Baggage Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>