force-app/main/default/objects/Case/fields/BAY_ARR_DEP__c.field-meta.xml
<CustomField>
    <fullName>BAY_ARR_DEP__c</fullName>
    <description>Displays the arrival and departure bays (in Suvarnabhumi) of flights</description>
    <label>BAY ARR/DEP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>