force-app/main/default/objects/Case/fields/Block_Name__c.field-meta.xml
<CustomField>
    <fullName>Block_Name__c</fullName>
    <description>Displays the Block Name of the personnel indicated in the maintenance cases</description>
    <label>Block Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>