force-app/main/default/objects/Case/fields/Blue_Case_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Blue_Case_Record_Count__c</fullName>
    <description>Displays the sum of all Maintenance Cases with Impact being Serviceable</description>
    <label>Blue Case Record Count</label>
    <summaryFilterItems>
        <field>Case_Group_Member__c.Impact__c</field>
        <operation>equals</operation>
        <value>Serviceable</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>