force-app/main/default/objects/Case/fields/Booking_Class__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class__c</fullName>
    <description>Displays the booking class of the Passenger that is related to the Case</description>
    <formula>Passengerid__r.Booking_Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Class</label>
    <type>Text</type>
</CustomField>