force-app/main/default/objects/Case/fields/Booking_Reference_txt__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_txt__c</fullName>
    <label>Booking Reference txt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>