force-app/main/default/objects/Case/fields/Cabin_Report_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Report_Ref_No__c</fullName>
    <description>Displays the reference number for Cabin Report</description>
    <label>Cabin Report Ref No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>