force-app/main/default/objects/Case/fields/Case_Accounted_For__c.field-meta.xml
<CustomField>
    <fullName>Case_Accounted_For__c</fullName>
    <description>Checks whether the Case is concerned with KPI report for DT and the performance limiter</description>
    <formula>IF(Report_Lack_of_Part__c = FALSE &amp;&amp; Report_Lack_of_Time__c = TRUE &amp;&amp; TEXT(Status) &lt;> "Void", TRUE, FALSE )</formula>
    <label>Case Accounted For</label>
    <type>Checkbox</type>
</CustomField>