force-app/main/default/objects/Case/fields/Case_created_within_3hrs_after_ATD__c.field-meta.xml
<CustomField>
    <fullName>Case_created_within_3hrs_after_ATD__c</fullName>
    <formula>IF(
((CreatedDate - Flightid__r.ATD_LT_DateTime__c) * 1440) &lt;= 180,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case created within 3 hrs after ATD</label>
    <type>Checkbox</type>
</CustomField>