force-app/main/default/objects/Case/fields/Case_Number_Custom_F__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Custom_F__c</fullName>
    <description>Displays the Case Number as a combination of Station Created by, Department and the automated Salesforce generated numbers</description>
    <formula>CreatedBy.Station__c &amp; CreatedBy.Department &amp; CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>