force-app/main/default/objects/Case/fields/Case_Number_Link_For_Console__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Link_For_Console__c</fullName>
    <description>Displays the Case Number as a combination of Station Created by, Department and the automated Salesforce generated numbers as a hyperlink</description>
    <formula>HYPERLINK("javascript:openNewTab('" &amp; Id &amp; "')",if( Text(Priority) == "Urgent",

CreatedBy.Station__c &amp; CreatedBy.Department &amp; CaseNumber &amp; " " &amp;   
IMAGE("/servlet/servlet.FileDownload?file=01528000003KdRV" &amp; 
 
if( Follow_up__c == TRUE, 

IMAGE("/img/samples/flag_yellow.gif","",13,13), 

""),"",13,13), 


CreatedBy.Station__c &amp; CreatedBy.Department &amp; CaseNumber &amp; 
 
if( Follow_up__c == TRUE, 

IMAGE("/img/samples/flag_yellow.gif","",13,13), 

"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>