force-app/main/default/objects/Case/fields/Case_Owner_Changed_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Changed_Time__c</fullName>
    <description>Displays the date and the time the case owner is changed</description>
    <label>Case Owner Changed Time</label>
    <type>DateTime</type>
</CustomField>