force-app/main/default/objects/Case/fields/Case_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Text__c</fullName>
    <description>Displays reasons for voiding of cases</description>
    <label>Case Reason Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>