force-app/main/default/objects/Case/fields/Case_Status_blue__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_blue__c</fullName>
    <description>Used for display in M2</description>
    <formula>IMAGE("https://c.cs6.content.force.com/servlet/servlet.ImageServer?id=015N0000000W2pU&amp;oid=00DN0000000AfvZ&amp;lastMod=1475398279000","")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>