force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Displays the value of case type used in case management</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commendation</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Star Alliance</fullName>
            </value>
            <value>
                <fullName>Baggage Claim</fullName>
            </value>
            <value>
                <fullName>Court Case</fullName>
            </value>
            <value>
                <fullName>14 CFR</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Arrival/Transit/Connections</fullName>
            </value>
            <value>
                <fullName>Authorities and Airport Facilities</fullName>
            </value>
            <value>
                <fullName>Boarding and Departure Area</fullName>
            </value>
            <value>
                <fullName>Check-in and Service before immigration - SPECIAL MEAL</fullName>
            </value>
            <value>
                <fullName>Check-in and Service before immigration - DGC</fullName>
            </value>
            <value>
                <fullName>Check-in and Service before immigration - DBC</fullName>
            </value>
            <value>
                <fullName>Check-in and Service before immigration - SEAT</fullName>
            </value>
            <value>
                <fullName>Check-in &amp; Service pre-immigration-SPML</fullName>
            </value>
            <value>
                <fullName>Check-in and Service before immigration - OTHER</fullName>
            </value>
            <value>
                <fullName>General Comments on TG Services</fullName>
            </value>
            <value>
                <fullName>Handling of flight Irregularities</fullName>
            </value>
            <value>
                <fullName>Lounges</fullName>
            </value>
            <value>
                <fullName>Unidentified</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Unruly</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>