force-app/main/default/objects/Case/fields/CasebyTouchpoint__c.field-meta.xml
<CustomField>
    <fullName>CasebyTouchpoint__c</fullName>
    <formula>IF( 
CONTAINS( Created_by_Profile__c , "CFMS"), "CUSTOMER FEEDBACK", 
IF( 
CONTAINS( Created_by_Profile__c , "Ground"), "GROUND SERVICE", 
IF( 
CONTAINS( Created_by_Profile__c , "DT"), "AIRCRAFT MAINTENANCE", 
IF( 
CONTAINS( Created_by_Profile__c , "Purser"), "IN-FLIGHT", 
IF( 
CONTAINS( Created_by_Profile__c , "PT1"), "EMAIL-TO-CASE", "OTHER" 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case by Touchpoint</label>
    <type>Text</type>
</CustomField>