force-app/main/default/objects/Case/fields/Category_CTI__c.field-meta.xml
<CustomField>
    <fullName>Category_CTI__c</fullName>
    <description>Category is a touchpoint fom investigation result (Manual input by SZ-R)</description>
    <label>Category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>