force-app/main/default/objects/Case/fields/Change_Cabin_Class__c.field-meta.xml
<CustomField>
    <fullName>Change_Cabin_Class__c</fullName>
    <description>Displays value of the new cabin class (code) of the passenger related to the case</description>
    <label>Change Cabin Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>