force-app/main/default/objects/Case/fields/Change_Cabin_Class_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Change_Cabin_Class_Full_Name__c</fullName>
    <description>Displays the value of the new cabin class (full name) of the passenger related to the case</description>
    <formula>CASE( Change_Cabin_Class__c , "F", "First", "C", "Business", "Y", "Economy", "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Cabin Class Full Name</label>
    <type>Text</type>
</CustomField>