force-app/main/default/objects/Case/fields/Change_Seat__c.field-meta.xml
<CustomField>
    <fullName>Change_Seat__c</fullName>
    <description>Displays the value of the new seat of the passenger related to the case</description>
    <label>Change Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>