force-app/main/default/objects/Case/fields/Closed_by__c.field-meta.xml
<CustomField>
    <fullName>Closed_by__c</fullName>
    <description>Displays the user who closed the case</description>
    <label>Closed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>