force-app/main/default/objects/Case/fields/Closed_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_Role__c</fullName>
    <description>Displays the role of the user who closed the case</description>
    <label>Closed by (Role)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>