force-app/main/default/objects/Case/fields/Closed_RP__c.field-meta.xml
<CustomField>
    <fullName>Closed_RP__c</fullName>
    <formula>IF( 
Text(Status) == "Closed" &amp;&amp; 
(ClosedDate - Case_Owner_Changed_Time__c) >= 0 &amp;&amp; 
(ClosedDate - Case_Owner_Changed_Time__c) &lt;= 20 

,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>