force-app/main/default/objects/Case/fields/Closed_Time__c.field-meta.xml
<CustomField>
    <fullName>Closed_Time__c</fullName>
    <description>Displays the date and time when the case was closed</description>
    <label>Closed Time</label>
    <type>DateTime</type>
</CustomField>