force-app/main/default/objects/Case/fields/Company_txt__c.field-meta.xml
<CustomField>
    <fullName>Company_txt__c</fullName>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>