force-app/main/default/objects/Case/fields/Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Amount__c</fullName>
    <description>Sums up the compensation amount</description>
    <label>Compensation Amount</label>
    <summaryFilterItems>
        <field>Compensation__c.Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>Compensation__c.CaseId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>